# advent-of-code-2024

./: .gitignore  Makefile  README.md  pyproject.toml
src/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
src/utils/: common.py  functools.py  itertools.py  matrices.py
